[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rodriguez-lab-notebook-franklinhiciano"
version = "0.0.5"                         # bump this
description = "Utilities for SAbDab retrieval, GitHub export, etc."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Franklin Hiciano" }]
license = { text = "MIT" }

[tool.setuptools]
package-dir = { "": "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["FranklinLabNB*"]

# ⬅️ dynamic deps must be here, not under [project]
[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
