[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rodriguez-lab-notebook-franklinhiciano"
version = "0.0.7"               # bump!
requires-python = ">=3.9"
dynamic = ["dependencies"]       # â† REQUIRED

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["FranklinLabNB*"]

[tool.setuptools.dynamic]
# include your sets here; add both if you want
dependencies = { file = ["requirements.txt", "requirements-sabdab_complexes.txt"] }
